force-app/main/default/objects/DM_Repayment_Plan__c/DM_Repayment_Plan__c.object-meta.xml
<CustomObject>
    <label>DM Repayment Plan</label>
    <nameField>
        <label>DM Repayment Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DM Repayment Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>