force-app/main/default/objects/DM_Repayment_Plan__c/fields/DM_Application__c.field-meta.xml
<CustomField>
    <fullName>DM_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DM Application</label>
    <referenceTo>genesis__Applications__c</referenceTo>
    <relationshipLabel>DM Repayment Plans</relationshipLabel>
    <relationshipName>DM_Repayment_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>