force-app/main/default/objects/DM_Repayment_Plan__c/fields/DM_Due_Day__c.field-meta.xml
<CustomField>
    <fullName>DM_Due_Day__c</fullName>
    <label>DM Due Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>