force-app/main/default/objects/DM_Repayment_Plan__c/fields/DM_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>DM_Effective_Date__c</fullName>
    <label>DM Effective Date</label>
    <type>Date</type>
</CustomField>