force-app/main/default/objects/DM_Repayment_Plan__c/fields/DM_Frequency__c.field-meta.xml
<CustomField>
    <fullName>DM_Frequency__c</fullName>
    <label>DM Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Semi-Monthly</fullName>
            </value>
            <value>
                <fullName>Semi-Monthly-PD</fullName>
            </value>
            <value>
                <fullName>Bi-Monthly</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Bi-weekly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Semi-Annual</fullName>
            </value>
            <value>
                <fullName>Single-Payment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>