force-app/main/default/objects/DM_Repayment_Plan__c/fields/DM_Frequency_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>DM_Frequency_Multiplier__c</fullName>
    <label>DM Frequency Multiplier</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>