force-app/main/default/objects/DM_Repayment_Plan__c/fields/DM_Number_of_Payments__c.field-meta.xml
<CustomField>
    <fullName>DM_Number_of_Payments__c</fullName>
    <label>DM Number of Payments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>