force-app/main/default/objects/DM_Repayment_Plan__c/fields/DM_Payment_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>DM_Payment_Start_Date__c</fullName>
    <label>DM Payment Start Date</label>
    <type>Date</type>
</CustomField>