force-app/main/default/objects/DM_Repayment_Plan__c/fields/DM_Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>DM_Payment_Type__c</fullName>
    <label>DM Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Equal Monthly Installments</fullName>
            </value>
            <value>
                <fullName>Equated Principal</fullName>
            </value>
            <value>
                <fullName>Interest Only</fullName>
            </value>
            <value>
                <fullName>Principal Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>